--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -646,6 +646,94 @@
     "\n",
     "x = data.apply(maxmin)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(100) \n",
+    "N = x.shape[0]\n",
+    "all = np.arange(1,N)\n",
+    "train = np.random.choice(N,int(.8*N) )\n",
+    "test = [item for item in all if item not in train]\n",
+    "\n",
+    "x_train = x.iloc[train,:]\n",
+    "y_train = y.iloc[train]\n",
+    "x_test = x.iloc[test,:]\n",
+    "y_test = y.iloc[test]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "k_bar = 25 # Number of k's to try\n",
+    "k_grid = np.arange(1,k_bar)\n",
+    "SSE = np.zeros(k_bar) # We'll store the SSE here \n",
+    "\n",
+    "for k in range(k_bar):\n",
+    "    model = KNeighborsRegressor(n_neighbors=k+1) # Create a sk model for k\n",
+    "    fitted_model = model.fit(x_train,y_train) # Train the model on our data\n",
+    "    y_hat = fitted_model.predict(x_test) # Predict values for test set\n",
+    "    SSE[k] = np.sum( (y_test-y_hat)**2 ) # Save the computed SSE for test set\n",
+    "\n",
+    "SSE_min = np.min(SSE) # Find lowest recorded SSE\n",
+    "min_index = np.where(SSE==SSE_min) # Find the indices of SSE that equal the minimum\n",
+    "k_star = min_index[0]+1 # Find the optimal value of k; why index+1?\n",
+    "print(k_star)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "index 24 is out of bounds for axis 0 with size 24",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[30], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m SSE_min \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mmin(SSE) \u001b[38;5;66;03m# highest recorded accuracy\u001b[39;00m\n\u001b[0;32m     12\u001b[0m min_index \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mwhere(SSE\u001b[38;5;241m==\u001b[39mSSE_min) \n\u001b[1;32m---> 13\u001b[0m k_star \u001b[38;5;241m=\u001b[39m \u001b[43mk_grid\u001b[49m\u001b[43m[\u001b[49m\u001b[43mmin_index\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;66;03m# Find the optimal value of k\u001b[39;00m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(k_star)\n\u001b[0;32m     16\u001b[0m plt\u001b[38;5;241m.\u001b[39mplot(np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m,k_bar),SSE) \u001b[38;5;66;03m# Plot accuracy by k\u001b[39;00m\n",
+      "\u001b[1;31mIndexError\u001b[0m: index 24 is out of bounds for axis 0 with size 24"
+     ]
+    }
+   ],
+   "source": [
+    "k_bar = 25\n",
+    "k_grid = np.arange(1,k_bar) # The range of k's to consider\n",
+    "SSE = np.zeros(k_bar) \n",
+    "\n",
+    "for k in range(k_bar):\n",
+    "    knn = KNeighborsRegressor(n_neighbors=k+1)\n",
+    "    predictor = knn.fit(x_train,y_train) \n",
+    "    y_hat = knn.predict(x_test)\n",
+    "    SSE[k] = np.sum( (y_test-y_hat)**2 ) # Bug in sklearn requires .values\n",
+    "\n",
+    "SSE_min = np.min(SSE) # highest recorded accuracy\n",
+    "min_index = np.where(SSE==SSE_min) \n",
+    "k_star = k_grid[min_index] # Find the optimal value of k\n",
+    "print(k_star)\n",
+    "\n",
+    "plt.plot(np.arange(0,k_bar),SSE) # Plot accuracy by k\n",
+    "plt.xlabel(\"k\")\n",
+    "plt.title(\"optimal k:\"+str(k_star)+', SSE:'+str(SSE_min))\n",
+    "plt.ylabel('SSE')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
